fix spacing after title

--- a/app/styles/thumbnailViewer.scss
+++ b/app/styles/thumbnailViewer.scss
@@ -45,6 +45,8 @@
 
       h2 {
         font-weight: bold;
+        margin: 0;
+        line-height: 1;
       }
 
     }
